// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ročník neexistuje 1`] = `
Object {
  "code": "neexistuje",
  "status": "Ročník JCM pro rok 2016 není vypsán.",
}
`;

exports[`ročník neexistuje 2`] = `
Array [
  Object {
    "__v": 1,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "rok": 2016,
        "ubytovani": Array [],
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`saveUbytovani [not authenticated] 1`] = `
Object {
  "code": "authentication token invalid",
  "status": "Špatný ověřovací token. Zkus se přihlásit znovu. Detaily: JsonWebTokenError: jwt must be provided",
}
`;

exports[`ubytování nevypsáno 1`] = `
Object {
  "code": "neexistuje",
  "status": "Nelze se přihlásit na ubytování v den: sobota. Není vypsáno.",
}
`;

exports[`ubytování nevypsáno 2`] = `
Array [
  Object {
    "__v": 1,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "rok": 2018,
        "ubytovani": Array [],
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`vytvoř minimálního účastníka 1`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`vytvoř minimálního účastníka 2`] = `
Array [
  Object {
    "__v": 2,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "rok": 2017,
        "ubytovani": Array [
          Object {
            "absolvovano": false,
            "den": "pátek",
            "prihlaseno": true,
          },
          Object {
            "absolvovano": true,
            "den": "sobota",
            "prihlaseno": true,
          },
        ],
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`účastník neexistuje 1`] = `
Object {
  "code": "neexistuje",
  "status": "Účastník s id 41224d776a326fb40f000001 neexistuje.",
}
`;
